--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
 .leito1, .leito2, .leito3, .leito4{
     
     width: 95%;
-    height: 8.8%;
+    height: 10%;
     display: flex;
     border-radius: 35px;
     background: #D9D9D9;
@@ -145,7 +145,7 @@ body {
     display: flex;
     border-radius: 20%;
     background: #D9D9D9;
-    margin-top: 0.5em;
+    margin-top: 0.8em;
     margin-left: 0.8vw;
 
 }
@@ -155,7 +155,7 @@ body {
     display: flex;
     border-radius: 35px;
     background: #D9D9D9;
-    margin-top: 1.4em;
+    margin-top: 1.4vw;
     margin-left: 0.8vw;
     color: #000;
     font-family: Inter;
@@ -164,4 +164,56 @@ body {
     font-weight: 500;
     line-height: normal;
 
+}
+
+.notification-container {
+    position: relative;
+    display: inline-block;
+}
+
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 15px;
+}
+
+/* Estilo da lista de notificações */
+.notification-list {
+    display: none; /* Inicialmente oculto */
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 200px;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 10;
+}
+
+.notification-list ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.notification-list ul li {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.notification-list ul li:last-child {
+    border-bottom: none;
+}
+
+.notification-list ul li:hover {
+    background-color: #f0f0f0;
 }
