--- a/login.css
+++ b/login.css
@@ -1,143 +1,154 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kadwa:wght@400;700&family=Lexend:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kadwa:wght@400;700&family=Lexend:wght@100..900&display=swap");
 /* Reseta margens e paddings */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Cabeçalho fixo */
 .cabecalho {
-    display: flex;
-    justify-content: center; /* Centraliza o conteúdo do cabeçalho */
-    align-items: center; /* Alinha verticalmente */
-    width: 100%;
-    height: 11px;
-    background: linear-gradient(90deg, #E60220 0%, #80B512 52.53%, #0059AB 100%);
-    flex-shrink: 0;
-    position: fixed; /* Fixa o cabeçalho no topo */
-    top: 0; /* Posiciona no topo */
-    left: 0; /* Alinha à esquerda */
-    background-color: white; /* Fundo branco */
-    z-index: 1000; /* Garante que o cabeçalho fique por cima de outros elementos */
+  display: flex;
+  justify-content: center; /* Centraliza o conteúdo do cabeçalho */
+  align-items: center; /* Alinha verticalmente */
+  width: 100%;
+  height: 11px;
+  background: linear-gradient(90deg, #e60220 0%, #80b512 52.53%, #0059ab 100%);
+  flex-shrink: 0;
+  position: fixed; /* Fixa o cabeçalho no topo */
+  top: 0; /* Posiciona no topo */
+  left: 0; /* Alinha à esquerda */
+  background-color: white; /* Fundo branco */
+  z-index: 1000; /* Garante que o cabeçalho fique por cima de outros elementos */
 }
 
 /* Corpo da página */
 body {
-    background-image: url('./Assets/hospital.png');
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: 40% 100%;
-    font-family: Arial, sans-serif;
-    background-color:white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding-top: 80px; /* Dê espaço ao conteúdo abaixo do cabeçalho fixo */
+  background-image: url("./Assets/hospital.png");
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: 40% 100%;
+  font-family: Arial, sans-serif;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.img{
-    display: flex;
-    width: 100%;
+.sabara-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.welcome-message {
+  font-size: 2.5vw;
+}
+
+.img {
+  display: flex;
+  width: 100%;
 }
 
 /* Container do formulário */
 .form-container {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    padding: 4vh;
-    border-radius: 9px;
-    width: 60%;
-    max-width: 40%;
-    margin-left: auto;  /* Move o container para a direita */
-    margin-right: 14%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 4vh;
+  border-radius: 9px;
+  width: 30%;
+  max-width: 30%;
+  margin-left: auto; /* Move o container para a direita */
+  margin-right: 18%;
 }
 
-
 h2 {
-    display: flex;
-    text-align: left;
-    margin-bottom: 20px;
-    color: #004585;
-    font-family: Lexend;
-    font-size: 2.2em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding-bottom: 13%;
+  display: flex;
+  text-align: left;
+  margin-bottom: 20px;
+  color: #004585;
+  font-family: Lexend;
+  font-size: 2.2em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 5%;
 }
 
 /* Estilo dos labels e inputs */
 label {
-    font-size: 14px;
-    margin-bottom: 5px;
-    display: block;
-    color: #000;
-    font-family: Lexend;
-    font-size: 1.3em;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: block;
+  color: #000;
+  font-family: Lexend;
+  font-size: 1.3em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 
-select, input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 2px solid #000;
-    border-radius: 20px;
-    font-size: 1em;
+select,
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid #000;
+  border-radius: 20px;
+  font-size: 1em;
 }
 
 input::placeholder {
-    color: #888;
+  color: #888;
+}
+
+.center-button {
+  margin-top: 20px;
+  text-align: center;
 }
 
 /* Estilo do botão */
-button {
-    align-items: center;
-    width: 50%;
-    padding: 12px;
-    background-color: #D9D9D9;
-    color: #8D8D8D;
-    font-family: Lexend;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    border: none;
-    border-radius: 130px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-left: 19vh;
+.button-entrar {
+  padding: 12px 20%;
+  background-color: #d9d9d9;
+  color: #8d8d8d;
+  font-family: Lexend;
+  font-size: 32px !important;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: none;
+  border-radius: 130px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-button:hover {
-    background-color: #004585;
-    color: white;
+.button-entrar:hover {
+  background-color: #004585;
+  color: white;
 }
 
 /* Estilo para mensagens de erro */
 .error-message {
-    color: red;
-    font-size: 14px;
-    text-align: center;
-    margin-top: 15px;
+  color: red;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 15px;
 }
 
 .rodape {
-    display: flex;
-    justify-content: center; /* Centraliza o conteúdo do cabeçalho */
-    align-items: center; /* Alinha verticalmente */
-    width: 100%;
-    height: 11px;
-    background: linear-gradient(90deg, #E60220 0%, #80B512 52.53%, #0059AB 100%);
-    flex-shrink: 0;
-    position: fixed; /* Fixa o cabeçalho no topo */
-    bottom: 0; /* Posiciona no topo */
-    left: 0; /* Alinha à esquerda */
-    background-color: white; /* Fundo branco */
-    z-index: 1000; /* Garante que o cabeçalho fique por cima de outros elementos */
+  display: flex;
+  justify-content: center; /* Centraliza o conteúdo do cabeçalho */
+  align-items: center; /* Alinha verticalmente */
+  width: 100%;
+  height: 11px;
+  background: linear-gradient(90deg, #e60220 0%, #80b512 52.53%, #0059ab 100%);
+  flex-shrink: 0;
+  position: fixed; /* Fixa o cabeçalho no topo */
+  bottom: 0; /* Posiciona no topo */
+  left: 0; /* Alinha à esquerda */
+  background-color: white; /* Fundo branco */
+  z-index: 1000; /* Garante que o cabeçalho fique por cima de outros elementos */
 }
